--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,27 @@
-
-
-
-body {
-    background-image: url("../pictures/kuva5.png");
-    background-attachment: fixed;
-    background-position: center center;
+body, html {
+    height: 100%;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+.hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../pictures/kuva5.png");
+    height: 100%;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-color:crimson
-}
+    position: relative;
+  }
+  
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
+
+
 
 .container-fluid {
     text-align: center;
