--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@ body, html {
   }
 .hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../pictures/kuva5.png");
-    height: 100%;
+    height: 94%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -19,13 +19,17 @@ body, html {
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
 
-
+.container {
+  color: black;
+  background-color: white; opacity: 0.4;
+}
 
 .container-fluid {
     text-align: center;
-    background-color: crimson;
+    background-color: darkslategray ; 
 }
 
 footer {
@@ -33,7 +37,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: red;
+    background-color:darkslategray ; opacity: 0.8;
     color: white;
     text-align: center;
  }
