sass white lisätty

--- a/styles/sass-styles.scss
+++ b/styles/sass-styles.scss
@@ -1,3 +1,5 @@
+$typekit-white: "#ffffff";
+
 body, html {
     height: 100%;
     margin: 0;
@@ -53,3 +55,4 @@ footer {
  .img2 {
    color: aliceblue;
  }
+ 
