--- a/styles/built-styles.css
+++ b/styles/built-styles.css
@@ -67,4 +67,20 @@ a[target] {
   color: #fff;
 }
 
+footer + p {
+  text-align: center;
+}
+
+div > p {
+  background-color: yellow;
+}
+
+div ~ h5 {
+  color: aqua;
+}
+
+.important {
+  background-color: rebeccapurple;
+}
+
 /*# sourceMappingURL=built-styles.css.map */
