--- a/styles/sass-styles.scss
+++ b/styles/sass-styles.scss
@@ -57,10 +57,10 @@ footer {
    width: 100%;
  }
 
- #info {
+ #id {
  
    background-color: lightblue;
-   margin-left: 50%;
+   margin-left: 30%;
  }
  .img2 {
    color: aliceblue;
