--- a/styles/built-styles.css
+++ b/styles/built-styles.css
@@ -48,9 +48,9 @@ footer {
   width: 100%;
 }
 
-#info {
+#id {
   background-color: lightblue;
-  margin-left: 50%;
+  margin-left: 30%;
 }
 
 .img2 {
